[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball_display"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pygame",
    "pydantic",
    "MLB-StatsAPI",
]

[tool.setuptools]
packages = ["baseball_display"]

[project.scripts]
baseball-display = "baseball_display.app:main"
