[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball_display"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pygame",
    "pydantic",
    "MLB-StatsAPI",
]

[project.optional-dependencies]
raspberry-pi = [
    # rpi-lgpio is a drop-in for RPi.GPIO that works on modern Pi OS
    # kernels (6.x). The legacy RPi.GPIO can't register edge callbacks
    # on those kernels, which would force our rotary-encoder reads into
    # a laggy polling fallback.
    "rpi-lgpio",
    "spidev",
    "numpy",
]

[tool.setuptools]
packages = ["baseball_display"]
include-package-data = true

[tool.setuptools.package-data]
baseball_display = ["assets/fonts/*.ttf", "assets/fonts/*.txt"]

[project.scripts]
baseball-display = "baseball_display.app:main"
