[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball_display"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pygame",
    "pydantic",
    "MLB-StatsAPI",
    # Team logos ship as SVG; svglib + reportlab rasterize them and Pillow
    # (imported directly in logos.py) recovers their alpha channel.
    "svglib",
    "reportlab",
    "pillow",
]

[project.optional-dependencies]
raspberry-pi = [
    # rpi-lgpio is a drop-in for RPi.GPIO that works on modern Pi OS
    # kernels (6.x). The legacy RPi.GPIO can't register edge callbacks
    # on those kernels, which would force our rotary-encoder reads into
    # a laggy polling fallback.
    "rpi-lgpio",
    "spidev",
    "numpy",
    # reportlab's renderPM needs a rasterization backend. The Windows wheel
    # ships the compiled `_rl_renderPM` C backend, but the Linux/aarch64
    # install does not, so logos.py can't rasterize SVGs and team logos
    # render as blank white squares. rlPyCairo (pulls pycairo + freetype-py)
    # is reportlab's supported fallback backend and is prebuilt on piwheels.
    "rlPyCairo",
]

[tool.setuptools]
packages = ["baseball_display"]
include-package-data = true

[tool.setuptools.package-data]
baseball_display = ["assets/fonts/*.ttf", "assets/fonts/*.txt"]

[project.scripts]
baseball-display = "baseball_display.app:main"
